Made price chooser area pretier

--- a/css/app.styl
+++ b/css/app.styl
@@ -13,9 +13,9 @@ input
     input()
 
 .app 
-    area()
-    padding: 25px;
-    text-align: center;
+    border 1px solid #ddd
+    padding 30px
+    text-align center
 
 
 .container
