--- a/css/app.css
+++ b/css/app.css
@@ -252,12 +252,8 @@ input:focus {
   outline: none;
 }
 .app {
-  box-shadow: inset 0 0 6px rgba(0,0,0,0.05);
-  background-color: #f5f5f5;
-  padding: 15px;
-  border-radius: 4px;
-  margin: 20px 0;
-  padding: 25px;
+  border: 1px solid #ddd;
+  padding: 30px;
   text-align: center;
 }
 .container {
